--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,7 +26,10 @@
         <activity android:name=".view.AssessmentListActivity" />
         <activity android:name=".view.AssessmentDetailActivity" />
         <activity android:name=".view.CourseNotesActivity" />
-        <activity android:name=".view.AddNewTermActivity"></activity>
+        <activity android:name=".view.AddNewTermActivity" />
+        <activity android:name=".view.AddNewCourse" />
+        <activity android:name=".view.AddNewAssessment" />
+        <activity android:name=".view.AddNewMentor"></activity>
     </application>
 
 </manifest>
