--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,7 +29,8 @@
         <activity android:name=".view.AddNewTermActivity" />
         <activity android:name=".view.AddNewCourse" />
         <activity android:name=".view.AddNewAssessment" />
-        <activity android:name=".view.AddNewMentor"></activity>
+        <activity android:name=".view.AddNewMentor" />
+        <activity android:name=".view.UpdateMentorActivity"></activity>
     </application>
 
 </manifest>
