--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -30,7 +30,8 @@
         <activity android:name=".view.AddNewCourse" />
         <activity android:name=".view.AddNewAssessment" />
         <activity android:name=".view.AddNewMentor" />
-        <activity android:name=".view.UpdateMentorActivity"></activity>
+        <activity android:name=".view.UpdateMentorActivity" />
+        <activity android:name=".view.UpdateAssessmentActivity"></activity>
     </application>
 
 </manifest>
